--- a/styles/layout.css
+++ b/styles/layout.css
@@ -78,18 +78,18 @@ footer{
             width:100%;
             min-height:400px;
             display:grid;
-            grid-template-columns:repeat(auto-fit, minmax(200px, 1fr);
+            grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));
             grid-template-rows:auto;
             justify-content:center
         }
-        .grid>.item{
+        .grid>div{
             border:2px solid red;
             min-height:200px;
             display:flex;
             flex-flow:row wrap;
             justify-content:center
         }
-        .grid .article{
+        .grid article{
             border:1px solid green;
             background-color:rgba(255,255,0,.2);
             flex:1 1 200px;
