--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,3 +1,6 @@
+:root{
+    --col-width:100px
+}
 body,
 .page,
 .page *{
@@ -73,28 +76,28 @@ footer{
     border-top:2px solid #000
 }
 
-        .grid{
-            border:4px solid blue;
-            width:100%;
-            min-height:400px;
-            display:grid;
-            grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));
-            grid-template-rows:auto;
-            justify-content:center
-        }
-        .grid>div{
-            border:2px solid red;
-            min-height:200px;
-            display:flex;
-            flex-flow:row wrap;
-            justify-content:center
-        }
-        .grid article{
-            border:1px solid green;
-            background-color:rgba(255,255,0,.2);
-            flex:1 1 200px;
-            min-height:40px
-        }
-        .grid:nth-child(odd){
-            background-color:rgba(0,128,0,.2)
-        }
+.grid{
+    border:4px solid blue;
+    width:100%;
+    min-height:400px;
+    display:grid;
+    grid-template-columns:repeat(auto-fit, minmax(calc(var(--col-width) * 2),  1fr));
+    grid-template-rows:auto;
+    justify-content:center
+}
+.grid>div{
+    border:2px solid red;
+    min-height:200px;
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:center
+}
+.grid article{
+    border:1px solid green;
+    background-color:rgba(255,255,0,.2);
+    flex:1 1 var(--col-width);
+    min-height:40px
+}
+.grid:nth-child(odd){
+    background-color:rgba(0,128,0,.2)
+}
