--- a/styles/layout.css
+++ b/styles/layout.css
@@ -75,15 +75,16 @@ header{
 footer{
     border-top:2px solid #000
 }
-
 .grid{
     border:4px solid blue;
-    width:100%;
+    width:80%;
+    margin:auto;
     min-height:400px;
     display:grid;
     grid-template-columns:repeat(auto-fit, minmax(calc(var(--col-width) * 2),  1fr));
     grid-template-rows:auto;
-    justify-content:center
+    justify-content:center;
+    gap:10px
 }
 .grid>div{
     border:2px solid red;
