--- a/styles/layout.css
+++ b/styles/layout.css
@@ -81,13 +81,14 @@ footer{
     margin:auto;
     min-height:400px;
     display:grid;
-    grid-template-columns:repeat(auto-fit, minmax(calc(var(--col-width) * 2),  1fr));
+    grid-template-columns:repeat(auto-fit, minmax(calc(var(--col-width) * 2),  auto));
     grid-template-rows:auto;
     justify-content:center;
     gap:10px
 }
 .grid>div{
     border:2px solid red;
+
     min-height:200px;
     display:flex;
     flex-flow:row wrap;
