--- a/styles/layout.css
+++ b/styles/layout.css
@@ -77,7 +77,7 @@ footer{
 }
 .grid{
     border:4px solid blue;
-    width:80%;
+    width:min(400px, 100%);
     margin:auto;
     min-height:400px;
     display:grid;
